--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -38,18 +38,19 @@
                     </button>
                     <a class="navbar-brand" href="/homepage">Vixip</a>
                 </div>
-                <div class="navbar-collapse collapse">
-                    <form class="navbar-form navbar-left" action="#" role="search">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input class="form-control" id="navbarInput-01" type="search" placeholder="Search Painting">
-                                <span class="input-group-btn">
-                      <a type="button" class="btn" href="/search/painting"><span class="fui-search"></span></a>
-                                </span>
-                            </div>
-                        </div>
-                    </form>
+                <div class="navbar-collapse collapse">                    
                     <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Search <b class="caret"></b></a>
+                            <span class="dropdown-arrow"></span>
+                            <ul class="dropdown-menu">
+                                <li><a href="/search/painting">Painting</a></li>
+                                <li class="divider"></li>
+                                <li><a href="/search/trade">Trade</a></li>
+                                <li class="divider"></li>
+                                <li><a href="/search/user">User</a></li>                                                                    
+                            </ul>
+                        </li>
                         <li><a href="/homepage">Home page</a></li>
                         <li><a href="/homepage/addcontribute">New Contribution</a></li>
                         <!--<li><a href="/homepage/collect">Collection</a></li>-->
@@ -239,7 +240,9 @@
             },
             methods: {
                 follow: function() {
-                    this.$http.get(`/homepage/addfollowing?userID=${this.userID}`).then(
+                    var data = {};
+                    data.userID = this.userID;
+                    this.$http.patch('/homepage/addfollowing', data).then(
                         function(response) {
                             if (response.data.status == 1) {
                                 app.status = "Success!";
