--- a/views/searchUser.ejs
+++ b/views/searchUser.ejs
@@ -38,26 +38,27 @@
                     </button>
                     <a class="navbar-brand" href="/homepage">Vixip</a>
                 </div>
-                <div class="navbar-collapse collapse">
-                    <form class="navbar-form navbar-left" action="#" role="search">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input class="form-control" id="navbarInput-01" type="search" placeholder="Search Trade">
-                                <span class="input-group-btn">
-                      <a type="button" class="btn" href="/search/trade"><span class="fui-search"></span></a>
-                                </span>
-                            </div>
-                        </div>
-                    </form>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/homepage">Home page</a></li>
-                        <li><a href="/homepage/addcontribute">New Contribution</a></li>
-                        <!--<li><a href="/homepage/collect">Collection</a></li>-->
-                        <li><a href="/trade/tradehomepage">Trade Home</a></li>
-                        <li><a href="/homepage/config"><span class="visible-sm visible-xs">Settings<span class="fui-gear"></span></span><span class="visible-md visible-lg"><span class="fui-gear"></span></span></a></li>
-                        <li><a @click="quit"><span class="fui-exit"></span></a></li>
-                    </ul>
-                </div>
+                <div class="navbar-collapse collapse">                    
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Search <b class="caret"></b></a>
+                                <span class="dropdown-arrow"></span>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/search/painting">Painting</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="/search/trade">Trade</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="/search/user">User</a></li>                                                                    
+                                </ul>
+                            </li>
+                            <li><a href="/homepage">Home page</a></li>
+                            <li><a href="/homepage/addcontribute">New Contribution</a></li>
+                            <!--<li><a href="/homepage/collect">Collection</a></li>-->
+                            <li><a href="/trade/tradehomepage">Trade Home</a></li>
+                            <li><a href="/homepage/config"><span class="visible-sm visible-xs">Settings<span class="fui-gear"></span></span><span class="visible-md visible-lg"><span class="fui-gear"></span></span></a></li>
+                            <li><a @click="quit"><span class="fui-exit"></span></a></li>
+                        </ul>
+                    </div>
             </div>
         </div>
 
@@ -75,7 +76,6 @@
                                     <%=username %>
                                 </h4>
                                 <br/>
-                                <button class="btn btn-primary btn-hg" @click="follow">Follow</button>
                             </div>
                         </div>
                         <!--the others are the same-->
@@ -186,25 +186,7 @@
                     return true;
                 }
             },
-            methods: {
-                follow: function() {
-                    this.$http.get(`/homepage/addfollowing?userID=${this.userID}`).then(
-                        function(response) {
-                            if (response.data.status == 1) {
-                                app.status = "Success!";
-                                app.message = response.data.msg;
-                                $('#warning').modal({});
-                            } else if (response.data.status == 0) {
-                                app.status = "Error!";
-                                app.message = `Something wrong while following ERR:${response.data.msg}`;
-                                $('#warning').modal({});
-                            }
-                        },
-                        function(err) {
-                            console.log(err);
-                        }
-                    )
-                },
+            methods: {            
                 gotohomepage: function() {
                     location.href = `/homepage?userID=${this.userID}`;
                 },
@@ -234,7 +216,7 @@
                     this.data.username = this.suser;
                     this.data.offset = 0;
                     this.isProcess = true;
-                    this.$http.post('/search/user', this.data).then(
+                    this.$http.patch('/search/user', this.data).then(
                         function(response) {
                             if (response.data.status == 1) {
                                 app.users = response.data.data;
@@ -265,7 +247,7 @@
                 if (!isEmptyObject(app.data) && !app.isProcess) {
                     app.data.offset = app.users.length;
                     app.isProcess = true;
-                    app.$http.post('/search/user', app.data).then(
+                    app.$http.patch('/search/user', app.data).then(
                         function(response) {
                             if (response.data.status == 1) {
                                 for (var i = 0; i < response.data.data.length; i++) {
