refine restful API

--- a/views/addcontribute.ejs
+++ b/views/addcontribute.ejs
@@ -93,7 +93,7 @@
                                             </div>
                                             <div class="col-lg-2 upfilebox">
                                                 <input type="file" id="InputFile" @change="getFiles">
-                                                <button class="btn btn-primary btn-block">Browse</button>
+                                                <button class="btn btn-primary">Browse</button>
                                             </div>
                                         </div>
                                         <div v-if="!isImage">
