--- a/views/searchtrade.ejs
+++ b/views/searchtrade.ejs
@@ -144,7 +144,7 @@
                                                             </p>
                                                         </div>
                                                     </div>
-                                                    <a class="btn btn-primary btn-large btn-block " :href="'/trade/getTrade?tradeID=' + trade.tradeID">More</a>
+                                                    <a class="btn btn-primary btn-large btn-block " :href="'/trade/oldTrade?tradeID=' + trade.tradeID">More</a>
                                                 </div>
                                             </div>
                                         </template>
