--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -129,7 +129,7 @@
                                             <!--<h3 class="tile-title ">buyer:发起人</h3>-->
                                             <!--, price:价格, ddl:deadline, state:状态-->
                                             <!--<p>Vector-based shapes and minimum of layer styles.</p>-->
-                                            <a class="btn btn-primary btn-large btn-block " href="<%='/trade/getTrade?tradeID=' + trade[i].tradeID %>">More</a>
+                                            <a class="btn btn-primary btn-large btn-block " href="<%='/trade/oldTrade?tradeID=' + trade[i].tradeID %>">More</a>
                                         </div>
                                     </div>
                                     <% } %>
