add english introduction

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,7 +49,7 @@
                     <legend></legend>
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <p class="tc">请先登录</p>
+                            <p class="tc">Please login first!</p>
                         </div>
                         <div class="panel-body m15">
                             <div class="form-group">
@@ -57,7 +57,7 @@
                                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-user"></span>
                                     </span>
-                                    <input type="text" class="form-control" id="username" name="username" v-model="username" placeholder="请输入用户名" required>
+                                    <input type="text" class="form-control" id="username" name="username" v-model="username" placeholder="Please enter username" required>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -65,14 +65,14 @@
                                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-lock"></span>
                                     </span>
-                                    <input type="password" class="form-control" id="password" name="password" v-model="password" placeholder="请输入密码" required>
+                                    <input type="password" class="form-control" id="password" name="password" v-model="password" placeholder="Please enter password" required>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="btn btn-primary btn-block" id="login0" @click="login" :disabled="iserror">登录</button>
+                                <button type="submit" class="btn btn-primary btn-block" id="login0" @click="login" :disabled="iserror">Login</button>
                             </div>
                             <div class="form-group">
-                                <button type="button" class="btn btn-info btn-block" id="register0" @click="register">注册</button>
+                                <button type="button" class="btn btn-info btn-block" id="register0" @click="register">Register</button>
                             </div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                         </p>
                     </div>
                     <div class="col-md-2">
-                        <p><a href="#">&copy; 联系我们</a></p>
+                        <p><a href="#">&copy; Contact us</a></p>
                     </div>
                 </div>
             </div>
