--- a/views/register.ejs
+++ b/views/register.ejs
@@ -49,7 +49,7 @@
                     <legend></legend>
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <p class="tc">注册信息</p>
+                            <p class="tc">Registration Information</p>
                         </div>
                         <div class="panel-body m15">
                             <div class="form-group">
@@ -103,10 +103,10 @@
                                 </label>
                             </div>
                             <div class="form-group">
-                                <button type="button" class="btn btn-primary btn-block" id="register1" @click="register" :disabled="iserror">注册</button>
+                                <button type="button" class="btn btn-primary btn-block" id="register1" @click="register" :disabled="iserror">Register</button>
                             </div>
                             <div class="form-group">
-                                <button type="button" class="btn btn-info btn-block" id="login1" @click="login">登录</button>
+                                <button type="button" class="btn btn-info btn-block" id="login1" @click="login">Login</button>
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                         </p>
                     </div>
                     <div class="col-md-2">
-                        <p><a href="#">&copy; 联系我们</a></p>
+                        <p><a href="#">&copy; Contact us</a></p>
                     </div>
                 </div>
             </div>
