--- a/views/searchpainting.ejs
+++ b/views/searchpainting.ejs
@@ -193,7 +193,7 @@
                         </p>
                     </div>
                     <div class="col-md-2 ">
-                        <p><a href="# ">&copy; 联系我们</a></p>
+                        <p><a href="# ">&copy; Contact us</a></p>
                     </div>
                 </div>
             </div>
